fix: overflow on contenteditable

--- a/collective/rcse/resources/dev/less/desktop.less
+++ b/collective/rcse/resources/dev/less/desktop.less
@@ -22,6 +22,7 @@ body { padding-top: 54px!important; }
 div[contenteditable] {
    min-height: 200px;
    border-radius: 10px;
+   overflow: auto;
 }
 
 /*decrease size of the author photo*/
